--- a/catalog.html
+++ b/catalog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
   <head>
     <meta charset="UTF-8">
@@ -9,7 +9,145 @@
   </head>
 
   <body>
+    <header class="main-header">
+      <a class="page-header-logo" href="index.html">
+        <img class="header-logo" src="img/logo.png" width="138" height="64" alt="Логотип сайта Седона.">
+      </a>
+      <nav class="navigation">
+        <ul class="navigation-list">
+          <li class="navigation-item">Главная</li>
+          <li class="navigation-item">О Cедоне</li>
+          <li class="navigation-item">Гостиницы</li>
+        </ul>
+      </nav>
+      <nav class="user-navigation">
+        <ul class="user-navigation-list">
+          <li class="user-navigation-item">
+            <!--форма поиска на сайте-->
+            <form action=""></form>
+          </li>
+          <li class="user-navigation-item">
+            <!--векторная картинка избранное с цифрой 12-->
+          </li>
+          <li class="user-navigation-item">
+            <button class="want-here">Хочу сюда</button>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section class="filter">
+        <h1 class="filter-title">
+          Гостиницы Седоны
+        </h1>
+        <div class="breadcrumbs">
 
+        </div>
+        <div class="filter-card">
+
+        </div>
+      </section>
+      <section class="catalog-hotel-page">
+        <h2 class="catalog-hotel-title">
+          Найдено гостиниц: 38
+        </h2>
+        <!--фильтр гостиниц-->
+        <!--фильтр отображения -->
+        <ul class="catalog-hotel-card-list">
+          <li class="catalog-hotel-card-item">
+            <img class="hotel-card-img hotel-card-amara-resort-spa" src="img/catalog/amara-report-spa.png" width="300"
+              height="212" alt="Гостиница Амара ресорт спа.">
+            <h3 class="hotel-card-name">Amara Resort & Spa</h3>
+            <p class="hotel">Гостиница</p>
+            <p class="hotel-prise">От 4000 ₽</p>
+            <a class="more" href="#">подробнее</a>
+            <button class="to-favorites">в избранное</button>
+            <!--звезды в svg-->
+            <span>Рейтинг: 8,5</span>
+          </li>
+          <li class="catalog-hotel-card-item">
+            <img class="hotel-card-img hotel-card-villas-at-poco-diablo" src="img/catalog/villas-at-poco-diablo.png"
+              width="300" height="212" alt="Гостиница на мосту дьявола.">
+            <h3>Villas at Poco Diablo</h3>
+            <p class="hotel">Гостиница</p>
+            <p>От 5000 ₽</p>
+            <a class="more" href="#">подробнее</a>
+            <button class="to-favorites">в избранное</button>
+            <!--звезды в svg-->
+            <span>Рейтинг: 8,5</span>
+          </li>
+          <li class="catalog-hotel-card-item">
+            <img class="hotel-card-img hotel-card-desert-quail-inn" src="img/catalog/desert-quail-inn.png" width="300"
+              height="212" alt="Гостиница дезерт куэйл инн.">
+            <h3>Desert Quail Inn</h3>
+            <p class="hotel">Гостиница</p>
+            <p>От 2500 ₽</p>
+            <a class="more" href="#">подробнее</a>
+            <button class="to-favorites">в избранное</button>
+            <!--звезды в svg-->
+            <span>Рейтинг: 6,9</span>
+          </li>
+          <li class="catalog-hotel-card-item">
+            <img class="hotel-card-img hotel-card-greentree-inn" src="img/catalog/greentree-inn.jpg" width="300"
+              height="212" alt="Гостиница гринтри ин.">
+            <h3>GreenTree Inn</h3>
+            <p class="hotel">Гостиница</p>
+            <p>От 1500 ₽</p>
+            <a class="more" href="#">подробнее</a>
+            <button class="to-favorites">в избранное</button>
+            <!--звезды в svg-->
+            <span>Рейтинг: 5,0</span>
+          </li>
+        </ul>
+        <ul class="pagination">
+          <li class="pagination-item">
+            <a class="pagination-current">1</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">2</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">3</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">4</a>
+          </li>
+          <li class="pagination-item">
+            <p class="pagination-ellipsis">...</p>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">10</a>
+          </li>
+        </ul>
+      </section>
+      <section class="subscription">
+        <h2 class="heading-subscription">
+          Подпишитесь на рассылку
+        </h2>
+        <p class="text-subscription">
+          Только полезная информация и никакого спама, честное бойскаутское!
+        </p>
+        <!--форма обратной связи для оформления подписки-->
+      </section>
+    </main>
+    <footer class="main-footer">
+      <ul class="social-navigation-list">
+        <li class="social-navigation-item">
+          <img class="social-navigation-link" src="#" alt="Ссылка на странице вконтакте.">
+        </li>
+        <li class="social-navigation-item">
+          <img class="social-navigation-link" src="#" alt="Ссылка в чат телеграм.">
+        </li>
+        <li class="social-navigation-item">
+          <img class="social-navigation-link" src="#" alt="Ссылка на канал ютуб.">
+        </li>
+      </ul>
+      <a class="telephon" href="#">+7 (812) 812-12-12</a>
+      <a class="html-academy" href="https://htmlacademy.ru/">
+        <img class="htnl-academy-logo" src="img/html-academy-logo.png" width="115" height="33"
+          alt="Логотип фштиэмэль академии.">
+      </a>
+    </footer>
   </body>
 
 </html>
