--- a/catalog.html
+++ b/catalog.html
@@ -52,7 +52,11 @@
           Найдено гостиниц: 38
         </h2>
         <!--фильтр гостиниц-->
-        <!--фильтр отображения -->
+        <ul class="filter-display-list">
+          <li class="filter-display-item"><a class="filter-display-list" href="#"></a></li>
+          <li class="filter-display-item"><a class="filter-display-list" href="#"></a></li>
+          <li class="filter-display-item"><a class="filter-display-list" href="#"></a></li>
+        </ul>
         <ul class="catalog-hotel-card-list">
           <li class="catalog-hotel-card-item">
             <img class="hotel-card-img hotel-card-amara-resort-spa" src="img/catalog/amara-report-spa.png" width="300"
@@ -127,7 +131,7 @@
         <p class="text-subscription">
           Только полезная информация и никакого спама, честное бойскаутское!
         </p>
-        <!--форма обратной связи для оформления подписки-->
+        <form action=""></form>
       </section>
     </main>
     <footer class="main-footer">
