--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         <p class="text-subscription">
           Только полезная информация и никакого спама, честное бойскаутское!
         </p>
-        <!--форма обратной связи для оформления подписки-->
+        <form action=""></form>
       </section>
     </main>
     <footer class="main-footer">
