правка разметки и графики

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sedona</title>
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
 
   <body>
@@ -38,8 +39,10 @@
     </header>
     <main class="main-container">
       <section class="hero-block">
-        <img class="main-banner" src="img/index/hero-bunner.png" width="1200" height="485"
+        <img class="main-banner" src="img/index/hero-bunner.jpg" width="1200" height="485"
           alt="Пейзаж с горами курорта Седона.">
+        <img class="main-banner-text" src="img/index/hero-welcome.svg" width="458" height="352"
+          alt="Надпись на главном изображении - Добро пожаловать на курорт Седона.">
       </section>
       <section class="features">
         <h2 class="main-feature">
