--- a/catalog.html
+++ b/catalog.html
@@ -59,7 +59,7 @@
         </ul>
         <ul class="catalog-hotel-card-list">
           <li class="catalog-hotel-card-item">
-            <img class="hotel-card-img hotel-card-amara-resort-spa" src="img/catalog/amara-report-spa.png" width="300"
+            <img class="hotel-card-img hotel-card-amara-resort-spa" src="img/catalog/amara-report-spa.jpg" width="300"
               height="212" alt="Гостиница Амара ресорт спа.">
             <h3 class="hotel-card-name">Amara Resort & Spa</h3>
             <p class="hotel">Гостиница</p>
@@ -70,7 +70,7 @@
             <span>Рейтинг: 8,5</span>
           </li>
           <li class="catalog-hotel-card-item">
-            <img class="hotel-card-img hotel-card-villas-at-poco-diablo" src="img/catalog/villas-at-poco-diablo.png"
+            <img class="hotel-card-img hotel-card-villas-at-poco-diablo" src="img/catalog/villas-at-poco-diablo.jpg"
               width="300" height="212" alt="Гостиница на мосту дьявола.">
             <h3>Villas at Poco Diablo</h3>
             <p class="hotel">Гостиница</p>
@@ -81,7 +81,7 @@
             <span>Рейтинг: 8,5</span>
           </li>
           <li class="catalog-hotel-card-item">
-            <img class="hotel-card-img hotel-card-desert-quail-inn" src="img/catalog/desert-quail-inn.png" width="300"
+            <img class="hotel-card-img hotel-card-desert-quail-inn" src="img/catalog/desert-quail-inn.jpg" width="300"
               height="212" alt="Гостиница дезерт куэйл инн.">
             <h3>Desert Quail Inn</h3>
             <p class="hotel">Гостиница</p>
