разметка и подключение шрифтов

--- a/catalog.html
+++ b/catalog.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sedona - каталог гостиниц</title>
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
 
   <body>
@@ -13,11 +14,11 @@
       <a class="page-header-logo" href="index.html">
         <img class="header-logo" src="img/logo.png" width="138" height="64" alt="Логотип сайта Седона.">
       </a>
-      <nav class="navigation">
-        <ul class="navigation-list">
-          <li class="navigation-item">Главная</li>
-          <li class="navigation-item">О Cедоне</li>
-          <li class="navigation-item">Гостиницы</li>
+      <nav class="navigation-list">
+        <ul class="navigation-item">
+          <li class="navigation-link">Главная</li>
+          <li class="navigation-link-current">О Cедоне</li>
+          <li class="navigation-link">Гостиницы</li>
         </ul>
       </nav>
       <nav class="user-navigation">
