--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </a>
       <nav class="navigation-list">
         <ul class="navigation-item">
-          <li class="navigation-link current">Главная</li>
+          <li class="navigation-link navigation-link-current">Главная</li>
           <li class="navigation-link">О Cедоне</li>
           <li class="navigation-link">Гостиницы</li>
         </ul>
@@ -182,7 +182,7 @@
       <a class="telephon" href="#">+7 (812) 812-12-12</a>
       <a class="html-academy" href="https://htmlacademy.ru/">
         <img class="html-academy-logo" src="img/html-academy-logo.png" width="115" height="33"
-          alt="Логотип фштиэмэль академии.">
+          alt="Логотип аштиэмэль академии.">
       </a>
     </footer>
   </body>
