правки разметки, графики и базовой стилизации

--- a/catalog.html
+++ b/catalog.html
@@ -159,17 +159,17 @@
         <ul class="filter-display-list">
           <li class="filter-display-item">
             <a class="filter-display-list" href="#">
-              <img src="img/catalog/tile.svg" alt="малые карточки гостиниц">
+              <img src="img/catalog/tile.svg" height="16" width="14" alt="малые карточки гостиниц">
             </a>
           </li>
           <li class="filter-display-item">
             <a class="filter-display-list" href="#">
-              <img src="img/catalog/big-pic.svg" alt="большие картички гостиниц">
+              <img src="img/catalog/big-pic.svg" height="16" width="14" alt="большие картички гостиниц">
             </a>
           </li>
           <li class="filter-display-item">
             <a class="filter-display-list" href="#">
-              <img src="img/catalog/lines.svg" alt="строчный каталог">
+              <img src="img/catalog/lines.svg" height="16" width="14" alt="строчный каталог">
             </a>
           </li>
         </ul>
@@ -269,22 +269,38 @@
 
     <!-- подвал внутренней страцицы -->
     <footer class="inner-footer">
+
+      <!-- соцсети -->
       <ul class="social-navigation-list">
         <li class="social-navigation-item">
-          <img class="social-navigation-link" src="#" alt="Ссылка на странице вконтакте.">
+          <a href="https://vk.com/htmlacademy">
+            <img class="social-navigation-link" src="img/vk-icon.svg" height="24" width="14"
+              alt="Ссылка на странице вконтакте.">
+          </a>
         </li>
         <li class="social-navigation-item">
-          <img class="social-navigation-link" src="#" alt="Ссылка в чат телеграм.">
+          <a href="https://t.me/htmlacademy">
+            <img class="social-navigation-link" src="img/telegram-icon.svg" height="18" width="16"
+              alt="Ссылка в чат телеграм.">
+          </a>
         </li>
         <li class="social-navigation-item">
-          <img class="social-navigation-link" src="#" alt="Ссылка на канал ютуб.">
+          <a href=" https://www.youtube.com/user/htmlacademyru">
+            <img class="social-navigation-link" src="img/youtube-icon.svg" height="22" width="17"
+              alt="Ссылка на канал ютуб.">
+          </a>
         </li>
       </ul>
+
+      <!-- обратная связь -->
       <a class="telephon" href="#">+7 (812) 812-12-12</a>
+
+      <!-- логотип академии -->
       <a class="html-academy" href="https://htmlacademy.ru/">
-        <img class="htnl-academy-logo" src="img/html-academy-logo.png" width="115" height="33"
-          alt="Логотип фштиэмэль академии.">
+        <img class="html-academy-logo" src="img/html-academy-logo.png" width="115" height="33"
+          alt="Логотип аштиэмэль академии.">
       </a>
+
     </footer>
   </body>
 
