--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
           </li>
           <li class="features-card-item">
             <div class="feature-card-link feature-card-link-indigo housing">
-              <!--Векторное изображения-->
+              <img class="house-pic" src="img/index/house.svg" height="75" width="72" alt="дом">
               <h3 class="feature-card-link-title">
                 Жильё
               </h3>
@@ -149,7 +149,7 @@
           </li>
           <li class="features-card-item">
             <div class="feature-card-link eat">
-              <!--Векторное изображения-->
+              <img class="eat-pic" src="img/index/food.svg" height="75" width="72" alt="гамбургер">
               <h3 class="feature-card-link-title">
                 Еда
               </h3>
@@ -160,7 +160,8 @@
           </li>
           <li class="features-card-item">
             <div class="feature-card-link feature-card-link-indigo souvenirs">
-              <!--Векторное изображения-->
+              <img class="souvenir-pic" src="img/index/box.svg" height="75" width="72"
+                alt="коробка перевязанная лентой с бантом наверху">
               <h3 class="feature-card-link-title">
                 Сувениры
               </h3>
@@ -205,17 +206,20 @@
       <ul class="social-navigation-list">
         <li class="social-navigation-item">
           <a href="https://vk.com/htmlacademy">
-            <img class="social-navigation-link" src="#" alt="Ссылка на странице вконтакте.">
+            <img class="social-navigation-link" src="img/vk-icon.svg" height="24" width="14"
+              alt="Ссылка на странице вконтакте.">
           </a>
         </li>
         <li class="social-navigation-item">
           <a href="https://t.me/htmlacademy">
-            <img class="social-navigation-link" src="#" alt="Ссылка в чат телеграм.">
+            <img class="social-navigation-link" src="img/telegram-icon.svg" height="18" width="16"
+              alt="Ссылка в чат телеграм.">
           </a>
         </li>
         <li class="social-navigation-item">
           <a href=" https://www.youtube.com/user/htmlacademyru">
-            <img class="social-navigation-link" src="#" alt="Ссылка на канал ютуб.">
+            <img class="social-navigation-link" src="img/youtube-icon.svg" height="22" width="17"
+              alt="Ссылка на канал ютуб.">
           </a>
         </li>
       </ul>
